Add a generic \opt{HAVEREMOTEKEYMAP}{& } to button maps to allow all manuals with HAVEREMOTEKEYMAP defined to build, regardless of whether tables have been edited for the specific remote keymap.  The actual button can be added inside this opt.
Change many IRIVER_RC_H100_PAD opts to the generic HAVEREMOTEKEYMAP


git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21997 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/bounce.tex
+++ b/manual/plugins/bounce.tex
@@ -12,10 +12,10 @@ scrolling from right to left.
     {\ButtonUp\ /\ \ButtonDown}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollBack\ /\ \ButtonScrollFwd}
 \opt{IRIVER_H10_PAD}{\ButtonScrollDown\ /\ \ButtonScrollUp}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
 & Moves to next/previous option\\
 \ButtonLeft\ /\ \ButtonRight
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
 & Increases/decreases option value\\
 \opt{RECORDER_PAD}{\ButtonOn}
 \opt{ONDIO_PAD}{\ButtonMenu}
@@ -25,13 +25,13 @@ scrolling from right to left.
 \opt{GIGABEAT_PAD}{\ButtonA}
 \opt{GIGABEAT_S_PAD}{\ButtonMenu}
 \opt{MROBE100_PAD}{\ButtonDisplay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
 & Toggles Scroll mode\\
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
 & Exits bounce demo\\
 \end{btnmap}
 \end{table}
