--- a/manual/plugins/flipit.tex
+++ b/manual/plugins/flipit.tex
@@ -13,7 +13,7 @@ a screen containing tokens of only one colour.
     {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} / \ButtonPlay{} / \ButtonLeft{} / \ButtonRight}
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Move the cursor \\
 \opt{PLAYER_PAD,RECORDER_PAD}{\ButtonPlay}
 \opt{ONDIO_PAD}{\ButtonMenu}
@@ -21,7 +21,7 @@ a screen containing tokens of only one colour.
     ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
     {\ButtonSelect}
 \opt{IRIVER_H10_PAD}{\ButtonRew}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Flip \\
 \opt{PLAYER_PAD}{\ButtonOn+\ButtonLeft}
 \opt{RECORDER_PAD}{\ButtonFOne}
@@ -31,7 +31,7 @@ a screen containing tokens of only one colour.
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay+\ButtonLeft}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec+\ButtonLeft}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Shuffle \\
 \opt{PLAYER_PAD}{\ButtonOn+\ButtonRight}
 \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -42,7 +42,7 @@ a screen containing tokens of only one colour.
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec+\ButtonRight}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
 \opt{MROBE100_PAD}{\ButtonPlay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Solve \\
 \opt{PLAYER_PAD}{\ButtonOn+\ButtonPlay}
 \opt{RECORDER_PAD}{\ButtonFThree}
@@ -54,14 +54,14 @@ a screen containing tokens of only one colour.
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec+\ButtonSelect}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
 \opt{MROBE100_PAD}{\ButtonDisplay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Solve step by step \\
 \opt{PLAYER_PAD}{\ButtonStop}
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_C200_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Quit the game \\
 \end{btnmap}
 \end{table}
