--- a/manual/plugins/jackpot.tex
+++ b/manual/plugins/jackpot.tex
@@ -8,10 +8,10 @@ have 20\$.  Payouts are given when three matching symbols come up.
 \begin{table}
 \begin{btnmap}{}{}
     \opt{PLAYER_PAD}{\ButtonPlay}
-          \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Play \\
     \opt{PLAYER_PAD}{\ButtonStop}
-          \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Exit the game \\
 \end{btnmap}
 \end{table}
