--- a/manual/plugins/lamp.tex
+++ b/manual/plugins/lamp.tex
@@ -5,13 +5,14 @@ You get an empty screen with maximum brightness.
 \begin{table}
     \begin{btnmap}{}{}
     \opt{lcd_color}{\ButtonLeft/\ButtonRight
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Toggle between colours\\
     }
     \opt{PLAYER_PAD}{\ButtonMenu}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonPlay}
     \opt{IRIVER_H10_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Quit\\
     \end{btnmap}
 \end{table}
