--- a/manual/plugins/mandelbrot.tex
+++ b/manual/plugins/mandelbrot.tex
@@ -13,7 +13,7 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd}
     \opt{SANSA_C200_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Zoom in\\
     %
     \opt{RECORDER_PAD}{\ButtonOn}
@@ -23,7 +23,7 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD}{Long \ButtonSelect}
     \opt{IRIVER_H10_PAD}{Long \ButtonPlay}
     \opt{SANSA_C200_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Zoom out\\
     %
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -35,7 +35,7 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{GIGABEAT_PAD}{\ButtonVolDown}
     \opt{GIGABEAT_S_PAD}{\ButtonNext}
     \opt{MROBE100_PAD}{\ButtonPlay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Decrease iteration depth (less detail)\\
     %
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -47,7 +47,7 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{GIGABEAT_PAD}{\ButtonVolUp}
     \opt{GIGABEAT_S_PAD}{\ButtonPrev}
     \opt{MROBE100_PAD}{\ButtonMenu}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Increase iteration depth (more detail)\\
     %
     \opt{RECORDER_PAD}{\ButtonFThree}
@@ -58,14 +58,14 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonDisplay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Reset and return to the default image\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
   \end{btnmap}
 \end{table}
