--- a/manual/plugins/midiplay.tex
+++ b/manual/plugins/midiplay.tex
@@ -21,11 +21,11 @@ might experience ``Buffer miss!'' with many files, except simple ones.}
     \opt{IPOD_3G_PAD,IPOD_4G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd/ \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/ \ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolUp/ \ButtonVolDown}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Volume up/ Volume down\\
     %
     \ButtonRight/ \ButtonLeft
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Skip 3 seconds forward/ backward\\
     %
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
@@ -33,14 +33,14 @@ might experience ``Buffer miss!'' with many files, except simple ones.}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Pause/Resume playback\\
     %
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD,SANSA_C200_PAD,IAUDIO_X5_PAD%
         ,IRIVER_H10_PAD,MROBE100_PAD}{\ButtonPower}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Stop playback and quit\\
     \end{btnmap}
 \end{table}
