--- a/manual/plugins/mpegplayer.tex
+++ b/manual/plugins/mpegplayer.tex
@@ -13,26 +13,26 @@ option and choose \setting{mpegplayer}.
     \opt{GIGABEAT_S_PAD}{\ButtonSelect{} or \ButtonPlay}
     \opt{GIGABEAT_PAD}{\ButtonSelect{} or \ButtonA}
     \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsPlay}
-      \opt{IRIVER_RC_H100_PAD}{&} 
+       \opt{HAVEREMOTEKEYMAP}{& } 
     & Pause / Resume\\
     \ActionWpsStop
-      \opt{HAVEREMOTEKEYPAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Stop\\
     \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsVolUp{} / \ActionWpsVolDown}
     \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonLeft{} or  \ButtonVolDown{} /
-      \opt{HAVEREMOTEKEYPAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         \ButtonRight{} or \ButtonVolUp}
     & Adjust volume up / down\\
     \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsSkipPrev{} / \ActionWpsSkipNext}
     \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonUp{} / \ButtonDown}
-      \opt{HAVEREMOTEKEYPAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Rewind / Fast Forward\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Open the MPEG Player menu\\
 \end{btnmap}
 \end{table}
