--- a/manual/plugins/nim.tex
+++ b/manual/plugins/nim.tex
@@ -8,10 +8,10 @@ last match loses.  You can take up to twice as many matches as the
 
 \begin{table}
 \begin{btnmap}{}{}
-\ButtonLeft & Decrease the number of matches \\
-\ButtonRight & Increase the number of matches \\
-\ButtonPlay & Remove the number of matches you have selected \\
-\ButtonStop & Exit the game \\
+\ButtonLeft \opt{HAVEREMOTEKEYMAP}{& } & Decrease the number of matches \\
+\ButtonRight \opt{HAVEREMOTEKEYMAP}{& } & Increase the number of matches \\
+\ButtonPlay \opt{HAVEREMOTEKEYMAP}{& } & Remove the number of matches you have selected \\
+\ButtonStop \opt{HAVEREMOTEKEYMAP}{& } & Exit the game \\
 \end{btnmap}
 \end{table}
 
