--- a/manual/plugins/pegbox.tex
+++ b/manual/plugins/pegbox.tex
@@ -33,7 +33,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{MROBE100_PAD}{\ButtonLeft, \ButtonRight}
     \opt{SANSA_C200_PAD}{\ButtonLeft, \ButtonRight}
 
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & to move around\\
 
     \opt{RECORDER_PAD}{\ButtonOn}
@@ -47,7 +47,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{MROBE100_PAD}{\ButtonSelect}
     \opt{SANSA_C200_PAD}{\ButtonSelect}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & to select/save\\
 
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -61,7 +61,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_C200_PAD}{\ButtonRec}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & to restart level\\
 
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -75,7 +75,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonMenu}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & to go up a level\\
 
     \nopt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,IAUDIO_X5_PAD}{
@@ -86,7 +86,7 @@ block and crosses which allow you to choose a replacement block.
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
         \opt{MROBE100_PAD}{\ButtonDisplay}
-            \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & to go down a level\\
     }
 
@@ -101,7 +101,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
     \opt{MROBE100_PAD}{\ButtonPower}
     \opt{SANSA_C200_PAD}{\ButtonPower}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & to quit\\
 
     \end{btnmap}
