--- a/manual/plugins/rockblox.tex
+++ b/manual/plugins/rockblox.tex
@@ -18,13 +18,13 @@ the blocks fall faster. If the pile of blocks reaches the ceiling, the game is o
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonOff}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Restart game\\
     \ButtonLeft
-        \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Move left\\
     \ButtonRight
-        \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Move right\\
     \opt{PLAYER_PAD}{\ButtonMenu}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
@@ -32,7 +32,7 @@ the blocks fall faster. If the pile of blocks reaches the ceiling, the game is o
         {\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Move down\\
     \opt{PLAYER_PAD}{\ButtonOn+\ButtonPlay}
     \opt{RECORDER_PAD}{\ButtonPlay}
@@ -44,7 +44,7 @@ the blocks fall faster. If the pile of blocks reaches the ceiling, the game is o
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonMenu}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Rotate left\\
     \opt{PLAYER_PAD}{\ButtonPlay}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}
@@ -55,7 +55,7 @@ the blocks fall faster. If the pile of blocks reaches the ceiling, the game is o
     \opt{SANSA_C200_PAD}{\ButtonVolUp/\ButtonUp}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonPlay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Rotate right\\
     \opt{PLAYER_PAD,RECORDER_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu}
@@ -64,11 +64,11 @@ the blocks fall faster. If the pile of blocks reaches the ceiling, the game is o
         ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Drop\\
     \opt{hold_button}{
         \ButtonHold{} switch
-            \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Pause\\
     }
     \opt{PLAYER_PAD}{\ButtonStop}
@@ -76,7 +76,7 @@ the blocks fall faster. If the pile of blocks reaches the ceiling, the game is o
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu+\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Quit\\
     \end{btnmap}
 \end{table}
