--- a/manual/plugins/rockpaint.tex
+++ b/manual/plugins/rockpaint.tex
@@ -103,23 +103,28 @@ if you select Exit, so any unsaved changes will be lost.}
         \nopt{IRIVER_H300_PAD,GIGABEAT_S_PAD}{\ButtonPower}
         \opt{IRIVER_H300_PAD}{\ButtonOff}
         \opt{GIGABEAT_S_PAD}{\ButtonBack}
+          \opt{HAVEREMOTEKEYMAP}{& }
         & Quits Rockpaint immediately.\\
     }
 
     \ButtonLeft
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Moves the cursor to the left.\\
 
     \ButtonRight
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Moves the cursor to the right.\\
 
     \nopt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,IRIVER_H10_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Moves the cursor up.\\
 
     \nopt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,IRIVER_H10_PAD}{\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Moves the cursor down.\\
 
     \opt{IRIVER_H300_PAD}{\ButtonOn}%
@@ -128,6 +133,7 @@ if you select Exit, so any unsaved changes will be lost.}
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}%
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}%
     \opt{IRIVER_H10_PAD}{\ButtonPlay}%
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Displays the Main Menu.\\
 
     \opt{IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonRec}
@@ -135,10 +141,12 @@ if you select Exit, so any unsaved changes will be lost.}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Displays the toolbar.\\
 
     \nopt{IRIVER_H10_PAD}{\ButtonSelect}%
     \opt{IRIVER_H10_PAD}{\ButtonFF}%
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Toggles the brush and selects objects.\\
 
     \end{btnmap}
