--- a/manual/plugins/sliding.tex
+++ b/manual/plugins/sliding.tex
@@ -15,7 +15,7 @@ Key controls:
     {\ButtonLeft{} / \ButtonRight{} / \ButtonMenu{} / \ButtonPlay}
   \opt{IRIVER_H10_PAD}
     {\ButtonLeft{} / \ButtonRight{} / \ButtonScrollUp{} / \ButtonScrollDown}
-  \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Move Tile \\
   %
   \opt{RECORDER_PAD}{\ButtonFOne}
@@ -25,7 +25,7 @@ Key controls:
   \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonLeft}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Shuffle \\
   %
   \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -37,7 +37,7 @@ Key controls:
   \opt{GIGABEAT_PAD}{\ButtonA}
   \opt{MROBE100_PAD}{\ButtonDisplay}
   \opt{GIGABEAT_S_PAD}{\ButtonMenu}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Change between picture and numbered tiles \\
   %
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
@@ -45,7 +45,7 @@ Key controls:
       ,MROBE100_PAD}{\ButtonPower}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
   \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Stop the game \\
   \end{btnmap}
 \end{table}
