--- a/manual/plugins/sudoku.tex
+++ b/manual/plugins/sudoku.tex
@@ -34,7 +34,7 @@ settings.
         {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Move the cursor\\
     %
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect & Change cursor move direction\\}
@@ -47,7 +47,7 @@ settings.
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{SANSA_E200_PAD}{\ButtonScrollBack{} / \ButtonScrollFwd}
     \opt{SANSA_C200_PAD}{\ButtonSelect{} / \ButtonVolUp{} / \ButtonVolDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Change number under the cursor\\
     %
     \opt{RECORDER_PAD}{Long \ButtonPlay}
@@ -58,7 +58,7 @@ settings.
     \opt{IRIVER_H10_PAD}{Long \ButtonRew}
     \opt{SANSA_E200_PAD}{Long \ButtonScrollBack{} / \ButtonScrollFwd}
     \opt{SANSA_C200_PAD}{Long \ButtonSelect{} / \ButtonVolUp{} / \ButtonVolDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Constantly changing the number under the cursor\\
     %
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -68,7 +68,7 @@ settings.
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonSelect}
     \opt{SANSA_C200_PAD}{\ButtonPower}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Open Menu\\
     %
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -78,7 +78,7 @@ settings.
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Add/Remove number to scratchpad\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
@@ -86,7 +86,7 @@ settings.
       ,MROBE100_PAD}{\ButtonPower}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Menu $\rightarrow$ Quit}
     \opt{SANSA_C200_PAD}{Long \ButtonPower}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
     %
     \end{btnmap}
