--- a/manual/plugins/brickmania.tex
+++ b/manual/plugins/brickmania.tex
@@ -29,7 +29,7 @@ effect, you must catch it with the paddle. Look out for the bad ones.\\
         \ButtonVolDown\ / \ButtonVolUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\\
         \ButtonScrollBack\ / \ButtonScrollFwd}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Moves the paddle\\
     \opt{RECORDER_PAD,IAUDIO_X5_PAD}{\ButtonPlay\ / \ButtonUp}
     \opt{ONDIO_PAD}{\ButtonMenu\ / \ButtonUp}
@@ -37,13 +37,13 @@ effect, you must catch it with the paddle. Look out for the bad ones.\\
       ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect\ / \ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay\ / \ButtonScrollUp}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Release the ball / Fire\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Open menu / Quit\\
     \end{btnmap}
 \end{table}
