--- a/manual/plugins/calculator.tex
+++ b/manual/plugins/calculator.tex
@@ -15,7 +15,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     \opt{SANSA_E200_PAD}{/}
     \opt{scrollwheel}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Move around the keypad\\
     %
     \opt{RECORDER_PAD}{\ButtonPlay}
@@ -24,7 +24,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Select a button\\
     %
     \nopt{ONDIO_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{
@@ -35,14 +35,14 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
         \opt{GIGABEAT_PAD}{\ButtonA}
         \opt{GIGABEAT_S_PAD}{\ButtonPlay}
         \opt{MROBE100_PAD}{\ButtonDisplay}
-           \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Delete last entered digit or clear after calculation\\
         %
     }
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{
         \opt{RECORDER_PAD}{\ButtonFTwo}
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
-          \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Cycle through the 4 basic operators\\
         %
     }
@@ -53,7 +53,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
         {\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonSelect}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Calculate\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
@@ -61,7 +61,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
 \end{btnmap}
 \end{table}
