--- a/manual/plugins/calendar.tex
+++ b/manual/plugins/calendar.tex
@@ -12,14 +12,14 @@ yearly, monthly, and weekly memos.
         ,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD}{\ButtonUp{} / \ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Move the selector\\
     %
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Show memos for the selected day\\
     %
     \opt{RECORDER_PAD}{\ButtonOn{} + \ButtonUp{} / \ButtonDown}
@@ -31,14 +31,14 @@ yearly, monthly, and weekly memos.
     \opt{GIGABEAT_S_PAD}{\ButtonNext{} / \ButtonPrev}
     \opt{SANSA_E200_PAD}{\ButtonUp{} / \ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonFF{} / \ButtonRew}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Previous / Next month\\
     %
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} + \ButtonSelect}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
 \end{btnmap}
 \end{table}
