--- a/manual/plugins/clix.tex
+++ b/manual/plugins/clix.tex
@@ -13,17 +13,21 @@ The more blocks you remove per turn, the more points you get.
       {\ButtonUp/\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu/\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Move the cursor around the blocks \\
     \opt{RECORDER_PAD,IRIVER_H10_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD%
       ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
       {\ButtonSelect}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Remove a block \\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}
-      {\ButtonOff & Exit \\}%
+      {\ButtonOff}
     \opt{IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD%
-      ,IAUDIO_X5_PAD}{\ButtonPower & Exit \\}%
-    \opt{GIGABEAT_S_PAD}{\ButtonBack & Exit \\}%
+      ,IAUDIO_X5_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
+       \opt{HAVEREMOTEKEYMAP}{& }
+     & Exit \\
   \end{btnmap}
 \end{table}
