--- a/manual/plugins/clock.tex
+++ b/manual/plugins/clock.tex
@@ -8,6 +8,7 @@ This is a fully featured analogue and digital clock plugin.
 \begin{table}
 \begin{btnmap}{}{}
     \ButtonLeft{} / \ButtonRight
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Cycle through modes \\
     \opt{RECORDER_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
         ,MROBE100_PAD}{\ButtonUp{} / \ButtonDown}
@@ -15,6 +16,7 @@ This is a fully featured analogue and digital clock plugin.
       {\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{SANSA_C200_PAD}{\ButtonVolUp{} / \ButtonVolDown}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Cycle through skins \\
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
@@ -23,23 +25,27 @@ This is a fully featured analogue and digital clock plugin.
       {\ButtonMenu}
     \opt{SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Main Menu \\
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_C200_PAD%
       ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Start / Stop Counter \\
     Long
     \opt{RECORDER_PAD_PAD}{\ButtonPlay}%
     \opt{IRIVER_H10_PAD}{\ButtonRew}%
     \opt{IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_C200_PAD%
       ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Reset Counter \\
     \opt{RECORDER_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu + \ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Save Settings (if enabled) and Exit \\
 \end{btnmap}
 \end{table}
