--- a/manual/plugins/doom.tex
+++ b/manual/plugins/doom.tex
@@ -81,23 +81,23 @@ Rockdoom options, you will need to quit your current game and restart the plugin
       ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu}
   \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Move Forward \\
 %
   \nopt{IPOD_3G_PAD,IPOD_4G_PAD}{
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
         ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
-        \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & Down\\
   }
 %
   \ButtonLeft
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Turn Left \\
 %
   \ButtonRight
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Turn Right \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
@@ -106,7 +106,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \opt{IRIVER_H10_PAD}{\ButtonRew}
   \opt{GIGABEAT_PAD}{\ButtonA}
   \opt{MROBE100_PAD}{\ButtonDisplay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Shoot \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
@@ -114,20 +114,20 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
   \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
   \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Open \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonHold{} switch}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
       ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPower}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & InGame Menu \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_3G_PAD,IPOD_4G_PAD,IAUDIO_X5_PAD%
       ,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Enter \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
@@ -137,7 +137,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
   \opt{SANSA_C200_PAD}{\ButtonVolUp}
   \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Change Weapon \\
 %
 \end{btnmap}
