--- a/manual/plugins/invadrox.tex
+++ b/manual/plugins/invadrox.tex
@@ -8,21 +8,21 @@ increase speed, drop down and reverse direction after every pass!
 \begin{table}
   \begin{btnmap}{}{}
     Left and Right
-      \opt{IRIVER_RC_H100_PAD}{&} 
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Move left and right \\
     %
     \opt{IRIVER_H100_PAD}{\ButtonOn}
     \opt{IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,IAUDIO_X5_PAD%
         ,GIGABEAT_PAD,SANSA_E200_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Fire \\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,%
         SANSA_E200_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
   \end{btnmap}
 \end{table}
