--- a/manual/plugins/jewels.tex
+++ b/manual/plugins/jewels.tex
@@ -21,14 +21,14 @@ In the mode puzzle the aim of the game is to connect the puzzles, by skilful swa
     \opt{IPOD_4G_PAD}{\ButtonMenu/\ButtonPlay}
     \opt{IPOD_3G_PAD}{\ButtonScrollBack/\ButtonScrollFwd}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Move the cursor around the jewels \\
     \opt{RECORDER_PAD,IRIVER_H10_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD%
       ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
       {\ButtonSelect}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Select a jewel \\
     \opt{IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD%
       ,IAUDIO_X5_PAD}{\ButtonPower}
@@ -36,7 +36,7 @@ In the mode puzzle the aim of the game is to connect the puzzles, by skilful swa
     \opt{IPOD_3G_PAD}{\ButtonMenu}
     \opt{IPOD_4G_PAD}{\ButtonSelect+ \ButtonMenu}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
      & Menu \\
   \end{btnmap}
 \end{table}
