--- a/manual/plugins/minesweeper.tex
+++ b/manual/plugins/minesweeper.tex
@@ -32,10 +32,11 @@ the location of a mine, it can be tagged to avoid accidentally
       {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
   \opt{IRIVER_H10_PAD}
       {\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Move the cursor across the minefield \\
   %
   \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Scroll through the entire minefield \\}%
   %
   \opt{RECORDER_PAD}{\ButtonFOne/\ButtonOn}
@@ -47,7 +48,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{SANSA_C200_PAD}{\ButtonSelect{} / \ButtonVolDown}
   \opt{GIGABEAT_PAD}{\ButtonA}
   \opt{MROBE100_PAD}{\ButtonDisplay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Toggle flag on / off \\
   %
   \opt{RECORDER_PAD}{\ButtonFTwo/\ButtonPlay}
@@ -57,7 +58,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
   \opt{SANSA_C200_PAD}{Long \ButtonSelect{} / \ButtonVolUp}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Reveal the contents of the current square \\
   %
   \opt{RECORDER_PAD}{\ButtonFThree}
@@ -68,14 +69,14 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{SANSA_E200_PAD}{Long \ButtonRec}
   \opt{IRIVER_H10_PAD}{\ButtonRew+\ButtonPlay}
   \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Display the current game status \\
   %
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
   \opt{GIGABEAT_S_PAD}{\ButtonBack}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
   & Exit the game \\
 \end{btnmap}
 \end{table}
