--- a/manual/plugins/pacbox.tex
+++ b/manual/plugins/pacbox.tex
@@ -33,25 +33,25 @@ found at \url{http://www.mame.net}.
         IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonRight}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonUp}
     \opt{h10_5gb}{\ButtonScrollUp}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Move Up\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,%
     IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonLeft}
     \opt{h10_5gb}{\ButtonScrollDown}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Move Down\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{h10}{\ButtonScrollUp}
     \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonLeft}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Move Left\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{h10}{\ButtonScrollDown}
     \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonRight}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Move Right\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
@@ -60,26 +60,26 @@ found at \url{http://www.mame.net}.
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Insert Coin\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
         ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & 1-Player Start\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{n/a}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonPower}
     \opt{SANSA_E200_PAD}{\ButtonRec}
     \opt{MROBE100_PAD}{\ButtonMenu}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & 2-Player Start\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonPower}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Menu\\
   \end{btnmap}
 \end{table}
