--- a/manual/plugins/pictureflow.tex
+++ b/manual/plugins/pictureflow.tex
@@ -27,27 +27,28 @@ aware:
         \opt{scrollwheel,IRIVER_H10_PAD}{
           \opt{scrollwheel}{\ButtonScrollFwd{} / \ButtonScrollBack}
           \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
+             \opt{HAVEREMOTEKEYMAP}{& }
           & Scroll through albums / track list\\}
 
         \nopt{scrollwheel,IRIVER_H10_PAD}{\ButtonLeft{} / \ButtonRight
 
-            \opt{IRIVER_RC_H100_PAD}{&}
+               \opt{HAVEREMOTEKEYMAP}{& }
         & Scroll through albums\\}
 
         \nopt{scrollwheel,IRIVER_H10_PAD}{\ButtonUp{} / \ButtonDown
-           \opt{IRIVER_RC_H100_PAD}{&}
+             \opt{HAVEREMOTEKEYMAP}{& }
         & Scroll through track list\\}
 
         \opt{IRIVER_H10_PAD}{\ButtonRight}
         \opt{ONDIO_PAD}{\ButtonUp}
         \opt{RECORDER_PAD}{\ButtonOn}
         \nopt{ONDIO_PAD,IRIVER_H10_PAD,RECORDER_PAD}{\ButtonSelect}
-          \opt{IRIVER_RC_H100_PAD}{&}
+             \opt{HAVEREMOTEKEYMAP}{& }
         & Enter track list \opt{swcodec}{/ Play album from selected
           track}\\
 
         \ButtonLeft
-            \opt{IRIVER_RC_H100_PAD}{&}
+               \opt{HAVEREMOTEKEYMAP}{& }
         & Exit track list\\
 
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
@@ -58,7 +59,7 @@ aware:
         \opt{IRIVER_H10_PAD,SANSA_C200_PAD}{\ButtonPower}
         \opt{RECORDER_PAD}{\ButtonFOne}
         \opt{ONDIO_PAD}{Long \ButtonMenu}
-           \opt{IRIVER_RC_H100_PAD}{&}
+            \opt{HAVEREMOTEKEYMAP}{& }
         & Enter menu\\
 
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,ONDIO_PAD}{\ButtonOff}
@@ -66,7 +67,7 @@ aware:
              MROBE100_PAD}{\ButtonPower}
         \opt{SANSA_C200_PAD,IRIVER_H10_PAD}{Long \ButtonPower}
         \opt{IPOD_1G2G_PAD,IPOD_3G_PAD,IPOD_4G_PAD}{Long \ButtonMenu}
-           \opt{IRIVER_RC_H100_PAD}{&}
+           \opt{HAVEREMOTEKEYMAP}{& }
         & Exit PictureFlow\\
     \end{btnmap}
 \end{table}
