--- a/manual/plugins/plasma.tex
+++ b/manual/plugins/plasma.tex
@@ -8,13 +8,14 @@ Plasma is a demo displaying a 80's style retro plasma effect.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd\ / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp\ / \ButtonScrollDown}
     \nopt{IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD}{\ButtonUp\ / \ButtonDown}
-      \opt{IRIVER_RC_H100_PAD}{&} 
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Adjust frequency\\
     \opt{lcd_color}{
         \opt{IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
             ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
             {\ButtonSelect}
         \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+           \opt{HAVEREMOTEKEYMAP}{& }
         & Change colours\\
     }
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
@@ -22,7 +23,7 @@ Plasma is a demo displaying a 80's style retro plasma effect.
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}
         {\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
     \end{btnmap}
 \end{table}
