--- a/manual/plugins/pong.tex
+++ b/manual/plugins/pong.tex
@@ -12,7 +12,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonMenu}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Left player up\\
     \opt{RECORDER_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonLeft}
     \opt{ONDIO_PAD}{\ButtonMenu}
@@ -21,7 +21,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonLeft}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Left player down\\
     \opt{RECORDER_PAD}{\ButtonFThree}
     \opt{ONDIO_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
@@ -31,7 +31,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonPlay}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Right player up\\
     \opt{RECORDER_PAD,SANSA_E200_PAD}{\ButtonRight}
     \opt{ONDIO_PAD,SANSA_C200_PAD}{\ButtonDown}
@@ -40,14 +40,14 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonRight}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Right player down\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
       ,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
     & Quit\\
     \end{btnmap}
 \end{table}
