--- a/manual/plugins/rockblox1d.tex
+++ b/manual/plugins/rockblox1d.tex
@@ -12,14 +12,14 @@ horizontal moving anymore and no need to rotate the brick!
          ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}
          {\ButtonSelect}
     \opt{RECORDER_PAD,IRIVER_H10_PAD}{\ButtonPlay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Move down faster\\
 
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu+\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Quit\\
     \end{btnmap}
 \end{table}
