--- a/manual/plugins/rockboy.tex
+++ b/manual/plugins/rockboy.tex
@@ -17,7 +17,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IPOD_4G_PAD}{Tap \ButtonPlay{} / \ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     / \ButtonLeft{} / \ButtonRight
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Direction keys\\
     %
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -27,7 +27,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & A button\\
     %
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -37,7 +37,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & B button\\
     %
     \opt{RECORDER_PAD}{\ButtonFThree}
@@ -50,7 +50,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Start\\
     %
     \nopt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{
@@ -60,14 +60,14 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD}{\ButtonVolUp}
         \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
-            \opt{IRIVER_RC_H100_PAD}{&}
+               \opt{HAVEREMOTEKEYMAP}{& }
         & Select\\
         %
     }
     \opt{RECORDER_PAD,IRIVER_H100_PAD,m5}{
         \opt{RECORDER_PAD}{\ButtonOn}
         \opt{IRIVER_H100_PAD,IAUDIO_X5_PAD}{\ButtonHold{} switch}
-            \opt{IRIVER_RC_H100_PAD}{&}
+              \opt{HAVEREMOTEKEYMAP}{& }
         & Cycle display scaling modes\\
     %
     }
@@ -76,7 +76,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IPOD_4G_PAD}{\ButtonHold{} switch}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,IRIVER_H10_PAD}{\ButtonPower}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Open Rockboy menu\\
     \end{btnmap}
 \end{table}
