--- a/manual/plugins/snake.tex
+++ b/manual/plugins/snake.tex
@@ -12,7 +12,7 @@ end when the snake touches either the borders of the screen or itself.
       {\ButtonUp/\ButtonDown}
      \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu/\ButtonPlay}
      \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
-       \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
      & Change levels (1 is slowest, 9 is fastest)\\
     %
     \opt{RECORDER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
@@ -20,7 +20,7 @@ end when the snake touches either the borders of the screen or itself.
       ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu}
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
      & Toggle Play/Pause\\
     %
     \end{btnmap}
