--- a/manual/plugins/solitaire.tex
+++ b/manual/plugins/solitaire.tex
@@ -21,7 +21,7 @@ visit
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     / \ButtonLeft{} / \ButtonRight
-       \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & Move Cursor around.\\
     %
     \opt{RECORDER_PAD}{\ButtonOn}
@@ -30,7 +30,7 @@ visit
       ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
       {\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & Select cards, move cards, reveal hidden cards...\\
     %
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -42,9 +42,9 @@ visit
     \opt{IRIVER_H10_PAD}{Long \ButtonLeft}
     \opt{SANSA_E200_PAD}{\ButtonRec}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & If a card was selected -- unselect it, else\\
-      \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & Draw 3 new cards from the remains stack\\
     %
     \opt{RECORDER_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
@@ -57,7 +57,7 @@ visit
     \opt{GIGABEAT_PAD}{\ButtonA{} + \ButtonLeft}
     \opt{GIGABEAT_S_PAD}{\ButtonSelect{} + \ButtonLeft}
     \opt{MROBE100_PAD}{\ButtonDisplay{} + \ButtonLeft}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & Put the card from the top of the remains stack on top of the cursor\\
     %
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -68,7 +68,7 @@ visit
     \opt{IAUDIO_X5_PAD}{Long \ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{SANSA_E200_PAD}{\ButtonRec{} + \ButtonRight}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & Put the card under the cursor on one of the 4 final colour stacks.\\
     %
     \opt{RECORDER_PAD}{\ButtonFThree}
@@ -80,14 +80,14 @@ visit
     \opt{GIGABEAT_S_PAD}{\ButtonSelect{} + \ButtonRight}
     \opt{MROBE100_PAD}{\ButtonDisplay{} + \ButtonRight}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & Put the card on top of the remains stack on one of the final colour stacks.\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H300_PAD,IRIVER_H100_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} + \ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
       & Show menu\\
    \end{btnmap}
   \end{table}
