--- a/manual/plugins/star.tex
+++ b/manual/plugins/star.tex
@@ -13,24 +13,24 @@ could not otherwise reach. The block cannot take ``o''s.
 \begin{table}
   \begin{btnmap}{}{}
     \ButtonLeft
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Move Left\\
     \ButtonRight
-      \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Move Right\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Move Up\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Move Down\\
     \opt{RECORDER_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu}
@@ -38,7 +38,7 @@ could not otherwise reach. The block cannot take ``o''s.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
         ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Switch between circle and square\\
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonLeft}
@@ -48,7 +48,7 @@ could not otherwise reach. The block cannot take ``o''s.
     \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonScrollDown}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonMenu}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Previous level\\
     \opt{RECORDER_PAD}{\ButtonFTwo}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonUp}
@@ -59,7 +59,7 @@ could not otherwise reach. The block cannot take ``o''s.
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonDisplay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Reset level \\
     \opt{RECORDER_PAD}{\ButtonFThree}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonRight}
@@ -69,13 +69,13 @@ could not otherwise reach. The block cannot take ``o''s.
     \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonScrollUp}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonPlay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Next level \\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+      \opt{HAVEREMOTEKEYMAP}{& }
         & Exit the game \\
   \end{btnmap}
 \end{table}
