--- a/manual/plugins/text_viewer.tex
+++ b/manual/plugins/text_viewer.tex
@@ -15,7 +15,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
     \opt{GIGABEAT_S_PAD}{\ButtonPrev}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & Scroll{}-up\\
 
     \opt{PLAYER_PAD}{\ButtonRight}
@@ -25,20 +25,20 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{GIGABEAT_S_PAD}{\ButtonNext}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & Scroll{}-down\\
 
     \opt{PLAYER_PAD}{\ButtonMenu+\ButtonLeft}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay+\ButtonLeft}
     \nopt{PLAYER_PAD,GIGABEAT_S_PAD}{\ButtonLeft}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & Top of file (Narrow mode) /
         One screen left (Wide mode)\\
 
     \opt{PLAYER_PAD}{\ButtonMenu+\ButtonRight}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay+\ButtonRight}
     \nopt{PLAYER_PAD,GIGABEAT_S_PAD}{\ButtonRight}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & Bottom of file (Narrow mode) /
         One screen right (Wide mode)\\
 
@@ -48,7 +48,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
         \opt{SANSA_E200_PAD}{\ButtonScrollBack}
         \opt{SANSA_C200_PAD}{\ButtonUp}
         \opt{GIGABEAT_S_PAD}{\ButtonUp}
-           \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & One line up\\
     }
 
@@ -58,21 +58,21 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD}{\ButtonDown}
         \opt{GIGABEAT_S_PAD}{\ButtonDown}
-        \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & One line down\\
     }
 
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_S_PAD}{
         \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonLeft}
         \opt{GIGABEAT_S_PAD}{\ButtonLeft}
-            \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & One column left\\
     }
 
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_S_PAD}{
         \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonRight}
         \opt{GIGABEAT_S_PAD}{\ButtonRight}
-          \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & One column right\\
     }
 
@@ -83,7 +83,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonRec}
     \opt{MROBE100_PAD}{\ButtonDisplay}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & Toggle autoscroll\\
 
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -93,7 +93,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
     \opt{IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & Enter menu\\
 
     \opt{PLAYER_PAD}{\ButtonStop}
@@ -102,7 +102,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
         & Exit text viewer\\
 
     \end{btnmap}
