--- a/manual/plugins/vumeter.tex
+++ b/manual/plugins/vumeter.tex
@@ -16,7 +16,7 @@ and the meter scale can be changed.
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
      ,MROBE100_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Save settings and quit\\
 \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
 \opt{ONDIO_PAD}{\ButtonMenu}
@@ -25,7 +25,7 @@ and the meter scale can be changed.
 \opt{GIGABEAT_PAD}{\ButtonA}
 \opt{MROBE100_PAD}{\ButtonDisplay}
 \opt{GIGABEAT_S_PAD}{\ButtonNext}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Help\\
 \opt{RECORDER_PAD}{\ButtonFOne}
 \opt{ONDIO_PAD}{Long \ButtonMenu}
@@ -33,21 +33,21 @@ and the meter scale can be changed.
      ,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
 \opt{IRIVER_H10_PAD}{\ButtonRew}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Settings\\
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd}
 \opt{SANSA_C200_PAD}{\ButtonVolUp}
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Raise Volume\\
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollBack}
 \opt{SANSA_C200_PAD}{\ButtonVolDown}
 \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Lower Volume\\
 \end{btnmap}
 \end{table}
