--- a/manual/plugins/wormlet.tex
+++ b/manual/plugins/wormlet.tex
@@ -18,13 +18,13 @@ Menu controls:}
 \begin{table}
     \begin{btnmap}{}{}
     \ButtonLeft\ / \ButtonRight 
-        \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Controls number of worms in the game\\
     \opt{RECORDER_PAD}{
         \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}
             {\ButtonUp\ / \ButtonDown}
-              \opt{IRIVER_RC_H100_PAD}{&}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu\ / \ButtonPlay} & Selects number of players\\
+        \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu\ / \ButtonPlay} 
+        & Selects number of players\\
         \ButtonFOne & Selects game mode.\\}
     \end{btnmap}
 \end{table}
@@ -73,22 +73,22 @@ Game controls:}
 \begin{table}
     \begin{btnmap}{}{}
         \ButtonLeft
-          \opt{IRIVER_RC_H100_PAD}{&}
+       \opt{HAVEREMOTEKEYMAP}{& }
         & Turn left\\
         \ButtonRight
-          \opt{IRIVER_RC_H100_PAD}{&}
+             \opt{HAVEREMOTEKEYMAP}{& }
         & Turn right\\
         \opt{ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
             ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
-          \opt{IRIVER_RC_H100_PAD}{&}
         \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu}
         \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
+            \opt{HAVEREMOTEKEYMAP}{& }
         & Turn Up\\
         \opt{ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
             ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
-          \opt{IRIVER_RC_H100_PAD}{&}
         \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonPlay}
         \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
+           \opt{HAVEREMOTEKEYMAP}{& }
         & Turn Down\\
     \end{btnmap}
 \end{table}
