--- a/manual/plugins/zxbox.tex
+++ b/manual/plugins/zxbox.tex
@@ -19,7 +19,7 @@ including an additional but fixed menu button, are assigned as follows:
         ,IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonUp/\ButtonDown/}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown/}
     \ButtonLeft/\ButtonRight
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Directional movement\\
     %
     \opt{IPOD_3G_PAD,IPOD_4G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,IAUDIO_X5_PAD%
@@ -28,7 +28,7 @@ including an additional but fixed menu button, are assigned as follows:
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Jump/Fire\\
     %
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -39,7 +39,7 @@ including an additional but fixed menu button, are assigned as follows:
     \opt{SANSA_C200_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{IRIVER_RC_H100_PAD}{&}
+  \opt{HAVEREMOTEKEYMAP}{& }
     & Open ZXBox menu\\
     \end{btnmap}
 \end{table}
