--- a/manual/rockbox_interface/main.tex
+++ b/manual/rockbox_interface/main.tex
@@ -435,7 +435,9 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
           {Long \ButtonOn}%
       \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD,sansaAMS}
           {\ButtonPower}%
-      \opt{IRIVER_RC_H100_PAD}{& \ButtonRCOn}%
+    \opt{HAVEREMOTEKEYMAP}{&
+      \opt{IRIVER_RC_H100_PAD}{\ButtonRCOn}%
+          }
       & Start Rockbox\\
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{Long \ButtonOff}%
       \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonPlay}%
@@ -444,7 +446,9 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
       \opt{PLAYER_PAD}{From the Main Menu, select \textbf{Shutdown}}%
       \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD,sansaAMS}%
           {Long \ButtonPower}%
-      \opt{IRIVER_RC_H100_PAD}{& Long \ButtonRCStop}%
+    \opt{HAVEREMOTEKEYMAP}{& 
+      \opt{IRIVER_RC_H100_PAD}{Long \ButtonRCStop}%
+          }
       & Shutdown Rockbox\\
     \end{btnmap}
   \end{table}
